[gd_scene load_steps=13 format=2]

[ext_resource path="res://fonts/pixel.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Hover_Button_Style.tres" type="StyleBox" id=2]
[ext_resource path="res://Normal_Button_Style.tres" type="StyleBox" id=3]
[ext_resource path="res://Pressed_Button_Style.tres" type="StyleBox" id=4]
[ext_resource path="res://JoinPartyPopup.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 32
outline_color = Color( 0.988235, 0.0784314, 0.0313726, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 25
outline_color = Color( 0.988235, 0.0784314, 0.0313726, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_color = Color( 0.988235, 0.0784314, 0.0313726, 1 )
extra_spacing_top = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 28
outline_color = Color( 0.988235, 0.0784314, 0.0313726, 1 )
extra_spacing_top = 5
font_data = ExtResource( 1 )

[node name="JoinPartyPopup" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = -961.912
margin_top = -562.914
margin_right = 958.088
margin_bottom = 517.086
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_Button" type="Button" parent="Control"]
margin_left = -8300.0
margin_top = -3999.0
margin_right = 15192.0
margin_bottom = 1255.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_left = -14938.0
margin_top = 527.0
margin_right = 1614.0
margin_bottom = 13839.0
color = Color( 0, 0, 0, 0.729412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect8" type="ColorRect" parent="Control"]
margin_left = 386.0
margin_top = 582.0
margin_right = 1527.0
margin_bottom = 1044.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect9" type="ColorRect" parent="Control"]
margin_left = -9793.0
margin_top = 521.984
margin_right = 12691.0
margin_bottom = 527.984
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="Control"]
anchor_top = -0.000249114
anchor_bottom = -0.000249114
margin_left = 1614.0
margin_top = 526.269
margin_right = 1952.0
margin_bottom = 603.269
color = Color( 0, 0, 0, 0.729412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="Control"]
margin_left = 1614.0
margin_top = 708.0
margin_right = 1952.0
margin_bottom = 5059.0
color = Color( 0, 0, 0, 0.729412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect12" type="ColorRect" parent="Control"]
margin_left = 1952.0
margin_top = 526.0
margin_right = 11572.0
margin_bottom = 6712.0
color = Color( 0, 0, 0, 0.729412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="Control"]
margin_left = 1815.0
margin_top = 603.0
margin_right = 1952.0
margin_bottom = 708.0
color = Color( 0, 0, 0, 0.729412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect6" type="ColorRect" parent="Control"]
margin_left = 1614.0
margin_top = 603.229
margin_right = 1815.0
margin_bottom = 607.229
color = Color( 0, 0.27451, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect7" type="ColorRect" parent="Control"]
margin_left = 1614.0
margin_top = 704.229
margin_right = 1815.0
margin_bottom = 708.229
color = Color( 0, 0.27451, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect13" type="ColorRect" parent="Control"]
margin_left = 1614.0
margin_top = 607.229
margin_right = 1619.0
margin_bottom = 708.229
color = Color( 0, 0.27451, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect14" type="ColorRect" parent="Control"]
margin_left = 1809.82
margin_top = 605.092
margin_right = 1814.82
margin_bottom = 706.092
color = Color( 0, 0.27451, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Control"]
margin_left = 391.0
margin_top = 585.0
margin_right = 1524.0
margin_bottom = 1039.0

[node name="TitleText" type="RichTextLabel" parent="Control"]
margin_left = 496.156
margin_top = 618.864
margin_right = 1478.16
margin_bottom = 771.869
rect_clip_content = false
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Enter your friend's party code: "
text = "Enter your friend's party code: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleText2" type="RichTextLabel" parent="Control"]
margin_left = 496.0
margin_top = 823.494
margin_right = 1448.0
margin_bottom = 1075.49
rect_clip_content = false
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0.368627, 0.368627, 0.368627, 1 )
bbcode_enabled = true
bbcode_text = "[center]Parties allow you to queue on the
same team with your friends. They do not
(yet) allow you to make private
custom lobbies"
text = "Parties allow you to queue on the
same team with your friends. They do not
(yet) allow you to make private
custom lobbies"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Control"]
margin_left = 732.336
margin_top = 687.824
margin_right = 1214.34
margin_bottom = 777.819
rect_clip_content = true
custom_fonts/font = SubResource( 5 )
align = 1
placeholder_text = "6969"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_left = 1237.65
margin_top = 689.489
margin_right = 1446.65
margin_bottom = 775.489
rect_clip_content = true
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enter"

[node name="Cancel_Button" type="Button" parent="Control"]
margin_left = 499.949
margin_top = 689.489
margin_right = 708.949
margin_bottom = 775.489
rect_clip_content = true
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinParty_HTTP" type="HTTPRequest" parent="."]
